--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -91,6 +91,25 @@
         - git-all
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 8
 
+    - name: Setup additional yum packages
+      yum:
+        name: "{{ packages }}"
+        update_cache: yes
+        state: present
+      vars:
+        packages:
+          - yum-utils
+          - centos-release-scl
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
+
+    - name: setup devtoolset-7-gcc
+      yum:
+        name: devtoolset-7-gcc*
+        update_cache: yes
+        enablerepo: centos-sclo-rh-testing
+        state: present
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
+
     - name: Install additional packages RPM
       yum:
         name: "{{ packages }}"
