--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -474,6 +474,12 @@
       - haproxy
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
+  - name: Install python-etcd for RHEL 7
+    pip:
+      name:
+        - python-etcd
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
+
   - name: Restart etcd RHEL
     service:
       name: etcd
