--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -308,7 +308,31 @@
       dest: /tmp/set_user
     become_user: postgres
 
-  - name: Clone pgbouncer sources
+  - name: Clone pgbouncer sources RHEL
+    git:
+      repo: https://github.com/pgbouncer/pgbouncer.git
+      version: pgbouncer_1_15_0
+      dest: /var/lib/pgsql/pgbouncer
+      recursive: yes
+      update: yes
+    become_user: postgres
+    when: ansible_os_family == "RedHat"
+
+  - name: Autogen pgbouncer RHEL
+    shell: ./autogen.sh
+    args:
+      chdir: /var/lib/pgsql/pgbouncer
+    become_user: postgres
+    when: ansible_os_family == "RedHat"
+
+  - name: Configure pgbouncer RHEL
+    shell: ./configure --prefix=/usr/local
+    args:
+      chdir: /var/lib/pgsql/pgbouncer
+    become_user: postgres
+    when: ansible_os_family == "RedHat"
+
+  - name: Clone pgbouncer sources Debian
     git:
       repo: https://github.com/pgbouncer/pgbouncer.git
       version: pgbouncer_1_15_0
@@ -316,18 +340,21 @@
       recursive: yes
       update: yes
     become_user: postgres
+    when: ansible_os_family == "Debian"
 
-  - name: Autogen pgbouncer
+  - name: Autogen pgbouncer Debian
     shell: ./autogen.sh
     args:
       chdir: /var/lib/postgresql/pgbouncer
     become_user: postgres
+    when: ansible_os_family == "Debian"
 
-  - name: Configure pgbouncer
+  - name: Configure pgbouncer Debian
     shell: ./configure --prefix=/usr/local
     args:
       chdir: /var/lib/postgresql/pgbouncer
     become_user: postgres
+    when: ansible_os_family == "Debian"
 
   - name: Clone wal2json sources
     git:
@@ -335,6 +362,24 @@
       version: wal2json_2_3
       dest: /tmp/wal2json
     become_user: postgres
+
+  - name: Clone pgbackrest sources Debian
+    git:
+      repo: https://github.com/pgbackrest/pgbackrest.git
+      version: release/2.34
+      dest:  /var/lib/postgresql/pgbackrest
+    become_user: postgres
+    become: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Clone pgbackrest sources RHEL
+    git:
+      repo: https://github.com/pgbackrest/pgbackrest.git
+      version: release/2.34
+      dest:  /var/lib/pgsql/pgbackrest
+    become_user: postgres
+    become: yes
+    when: ansible_os_family == "RedHat"
 
   - name: Remove pg_hba.conf debian
     file:
