--- a/tasks/setup_repo.yml
+++ b/tasks/setup_repo.yml
@@ -3,7 +3,7 @@
      deb: https://repo.percona.com/apt/pool/testing/p/percona-release/percona-release_1.0-27.generic_all.deb
     when: ansible_os_family == "Debian"
 
-  - name: add the main Percona yum repos for centos 6 and 7
+  - name: Install percona-release
     yum: name=https://repo.percona.com/yum/testing/latest/RPMS/noarch/percona-release-1.0-27.noarch.rpm
     when: ansible_os_family == "RedHat"
 
