--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -163,27 +163,27 @@
         - percona-patroni-doc
     when: ansible_os_family == "Debian"
 
-  - name: Install pg-stat-monitor RHEL
-    yum:
-      name: "{{ packages }}"
-      state: latest
-      update_cache: yes
-    vars:
-      packages:
-        - percona-pg-stat-monitor13
-        - percona-pg-stat-monitor13-debuginfo
-    when: ansible_os_family == "RedHat"
-
-  - name: Install pg-stat-monitor debian
-    apt:
-      name: "{{ packages }}"
-      state: latest
-      update_cache: yes
-    vars:
-      packages:
-        - percona-pg-stat-monitor13
-        - percona-pg-stat-monitor13-dbgsym
-    when: ansible_os_family == "Debian"
+#  - name: Install pg-stat-monitor RHEL
+#    yum:
+#      name: "{{ packages }}"
+#      state: latest
+#      update_cache: yes
+#    vars:
+#      packages:
+#        - percona-pg-stat-monitor13
+#        - percona-pg-stat-monitor13-debuginfo
+#    when: ansible_os_family == "RedHat"
+#
+#  - name: Install pg-stat-monitor debian
+#    apt:
+#      name: "{{ packages }}"
+#      state: latest
+#      update_cache: yes
+#    vars:
+#      packages:
+#        - percona-pg-stat-monitor13
+#        - percona-pg-stat-monitor13-dbgsym
+#    when: ansible_os_family == "Debian"
 
   - name: Install pgbadger RHEL
     yum:
@@ -256,14 +256,25 @@
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
       path: /etc/postgresql/13/main/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+      line: shared_preload_libraries = 'pgaudit, set_user'
     when: ansible_os_family == "Debian"
 
   - name: Add extensions to postgresql.conf for RHEL
     lineinfile:
       path: /var/lib/pgsql/13/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+      line: shared_preload_libraries = 'pgaudit, set_user'
     when: ansible_os_family == "RedHat"
+#  - name: Add extensions to postgresql.conf for Debian
+#    lineinfile:
+#      path: /etc/postgresql/13/main/postgresql.conf
+#      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+#    when: ansible_os_family == "Debian"
+#
+#  - name: Add extensions to postgresql.conf for RHEL
+#    lineinfile:
+#      path: /var/lib/pgsql/13/data/postgresql.conf
+#      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+#    when: ansible_os_family == "RedHat"
 
   - name: Clone pgaudit sources
     git:
