--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -165,27 +165,27 @@
         - percona-patroni-doc
     when: ansible_os_family == "Debian"
 
-  - name: Install pg-stat-monitor RHEL
-    yum:
-      name: "{{ packages }}"
-      state: latest
-      update_cache: yes
-    vars:
-      packages:
-        - percona-pg-stat-monitor12
-        - percona-pg-stat-monitor12-debuginfo
-    when: ansible_os_family == "RedHat"
-
-  - name: Install pg-stat-monitor debian
-    apt:
-      name: "{{ packages }}"
-      state: latest
-      update_cache: yes
-    vars:
-      packages:
-        - percona-pg-stat-monitor12
-        - percona-pg-stat-monitor12-dbgsym
-    when: ansible_os_family == "Debian"
+#  - name: Install pg-stat-monitor RHEL
+#    yum:
+#      name: "{{ packages }}"
+#      state: latest
+#      update_cache: yes
+#    vars:
+#      packages:
+#        - percona-pg-stat-monitor12
+#        - percona-pg-stat-monitor12-debuginfo
+#    when: ansible_os_family == "RedHat"
+#
+#  - name: Install pg-stat-monitor debian
+#    apt:
+#      name: "{{ packages }}"
+#      state: latest
+#      update_cache: yes
+#    vars:
+#      packages:
+#        - percona-pg-stat-monitor12
+#        - percona-pg-stat-monitor12-dbgsym
+#    when: ansible_os_family == "Debian"
 
   - name: Install pgbadger RHEL
     yum:
@@ -259,13 +259,15 @@
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
       path: /etc/postgresql/12/main/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+      line: shared_preload_libraries = 'pgaudit, set_user'
+#      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "Debian"
 
   - name: Add extensions to postgresql.conf for RHEL
     lineinfile:
       path: /var/lib/pgsql/12/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+      line: shared_preload_libraries = 'pgaudit, set_user'
+    #      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "RedHat"
 
   - name: Clone pgaudit sources
