--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -459,7 +459,7 @@
       state: started
       enabled: yes
 
-  - name: install etcd for RHEL 8
+  - name: install etcd for RHEL
     yum:
       name: "{{ packages }}"
       state: latest
@@ -468,7 +468,8 @@
       packages:
       - etcd
       - python3-python-etcd
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+      - haproxy
+    when: ansible_os_family == "RedHat"
 
   - name: Restart etcd RHEL
     service:
@@ -489,18 +490,6 @@
       state: restarted
       enabled: yes
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Install patroni related packages RHEL
-    yum:
-      name: "{{ packages }}"
-      state: latest
-      update_cache: yes
-    vars:
-      packages:
-      - etcd
-      - haproxy
-      - python3-python-etcd
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
   - name: Install patroni related packages Debian
     apt:
