Delete rhel8 and add centos8

--- a/ppg/pg-13-major-upgrade/molecule/centos8/molecule.yml
+++ b/ppg/pg-13-major-upgrade/molecule/centos8/molecule.yml
@@ -4,9 +4,9 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: rhel8-${BUILD_NUMBER}-${JOB_NAME}
+  - name: centos8-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-0badcc5b522737046
+    image: ami-071096749fda40d3f
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.micro
     ssh_user: ec2-user
@@ -22,10 +22,9 @@ provisioner:
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
     cleanup: ../../playbooks/cleanup.yml
-    side_effect: ../../playbooks/side_effect.yml
 verifier:
   name: testinfra
-  directory: ../../../tests/test_full_upgrade
+  directory: ../../../tests/test_upgrade
   options:
     verbose: true
     s: true
