--- a/ppg/pg-12-minor-upgrade/molecule/centos8/molecule.yml
+++ b/ppg/pg-12-minor-upgrade/molecule/centos8/molecule.yml
@@ -4,9 +4,9 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: rhel8-${BUILD_NUMBER}-${JOB_NAME}
+  - name: centos8-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-0badcc5b522737046
+    image: ami-071096749fda40d3f
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t2.micro
     ssh_user: ec2-user
@@ -21,10 +21,9 @@ provisioner:
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
-    cleanup: ../../playbooks/cleanup.yml
 verifier:
   name: testinfra
-  directory: ../../../tests/test_upgrade
+  directory: ../../../tests/tests_ppg
   options:
     verbose: true
     s: true
@@ -39,6 +38,5 @@ scenario:
     - create
     - prepare
     - converge
-    - cleanup
     - verify
     - destroy
