--- a/ppg/pg-11-with-vanila-components/tasks/main.yml
+++ b/ppg/pg-11-with-vanila-components/tasks/main.yml
@@ -25,11 +25,11 @@
 
 - name: DNF disable postgresql RHEL
   command: sudo dnf module disable postgresql -y
-  when: ansible_distribution == "RedHat"
+  when: ansible_os_family == "RedHat"
 
 - name: DNF clean
   command: sudo dnf clean all -y
-  when: ansible_distribution == "RedHat"
+  when: ansible_os_family == "RedHat"
 
 - name: install Percona Platform for PostgreSQL rpm packages for RHEL
   yum:
@@ -86,7 +86,7 @@
     name: postgis25_11
     state: latest
     enablerepo: PowerTools
-  when: ansible_distribution == "RedHat" and ansible_distribution_major_version == "8"
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: install postgis RHEL based 7
   yum:
