--- a/tasks/install_ppg12.yml
+++ b/tasks/install_ppg12.yml
@@ -1,7 +1,7 @@
   - name: Clean dnf RHEL8
     become: true
     command: dnf clean all -y
-    when: ansible_distribution == "RedHat" and ansible_distribution_major_version == "8"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable dnf module for RHEL8
     become: true
@@ -82,7 +82,7 @@
 
   - name: DNF clean RHEL
     command: sudo dnf module disable postgresql -y
-    when: ansible_distribution == "RedHat"
+    when: ansible_os_family == "RedHat"
 
   - name: Disable llvm-toolset dnf module for RHEL8
     become: true
