--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -286,7 +286,7 @@
   - name: Clone pg_repack sources
     git:
       repo: https://github.com/reorg/pg_repack.git
-      version: ver_1.4.6
+      version: ver_1.4.7
       dest: /tmp/pg_repack
     become_user: postgres
 
@@ -308,7 +308,7 @@
   - name: Clone pg_stat_monitor sources
     git:
       repo: https://github.com/percona/pg_stat_monitor.git
-      version: 0.9.2-BETA1
+      version: 1.0.0-Beta-2
       dest: /tmp/pg_stat_monitor
     become_user: postgres
 
