--- a/tasks/install_ppg13.yml
+++ b/tasks/install_ppg13.yml
@@ -1,7 +1,7 @@
   - name: Clean dnf RHEL8
     become: true
     command: dnf clean all -y
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable dnf module for RHEL8
     become: true
