--- a/tasks/install_ppg14.yml
+++ b/tasks/install_ppg14.yml
@@ -6,12 +6,12 @@
   - name: Disable dnf module for RHEL8
     become: true
     command: dnf module disable postgresql -y
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-#  - name: Disable llvm-toolset dnf module for RHEL8
-#    become: true
-#    command: dnf module disable llvm-toolset -y
-#    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+  - name: Disable llvm-toolset dnf module for RHEL8
+    become: true
+    command: dnf module disable llvm-toolset -y
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: install Percona Platform for PostgreSQL deb packages
     apt:
