Add debug prints

--- a/tasks/install_ppg14.yml
+++ b/tasks/install_ppg14.yml
@@ -1,3 +1,9 @@
+  - debug:
+      msg: "{{ hostvars[inventory_hostname].ansible_distribution }}"
+  - debug:
+      msg: "{{ hostvars[inventory_hostname].ansible_distribution_major_version }}"
+  - debug:
+      msg: "{{ hostvars[inventory_hostname].ansible_distribution_version }}"
   - name: Clean dnf RHEL8
     become: true
     command: dnf clean all -y
