--- a/tasks/install_ppg14.yml
+++ b/tasks/install_ppg14.yml
@@ -1,4 +1,6 @@
   - debug:
+      msg: "{{ hostvars[inventory_hostname].ansible_os_family }}"
+  - debug:
       msg: "{{ hostvars[inventory_hostname].ansible_distribution }}"
   - debug:
       msg: "{{ hostvars[inventory_hostname].ansible_distribution_major_version }}"
@@ -7,17 +9,17 @@
   - name: Clean dnf RHEL8
     become: true
     command: dnf clean all -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "7"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable dnf module for RHEL8
     become: true
     command: dnf module disable postgresql -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "7"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable llvm-toolset dnf module for RHEL8
     become: true
     command: dnf module disable llvm-toolset -y
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "7"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: install Percona Platform for PostgreSQL deb packages
     apt:
@@ -84,10 +86,6 @@
       - percona-postgresql14-test
       - percona-postgresql14-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
-
-  - name: DNF clean RHEL
-    command: sudo dnf module disable postgresql -y
-    when: ansible_distribution == "RedHat"
 
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
