--- a/tasks/install_ppg13.yml
+++ b/tasks/install_ppg13.yml
@@ -3,7 +3,7 @@
     command: dnf clean all -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Disable dnf module for RHEL8
+  - name: Disable dnf module for RHEL8 and ansible_distribution_major_version == "8"
     become: true
     command: dnf module disable postgresql -y
     when: ansible_os_family == "RedHat"
