--- a/tasks/install_ppg14.yml
+++ b/tasks/install_ppg14.yml
@@ -6,6 +6,14 @@
       msg: "{{ hostvars[inventory_hostname].ansible_distribution_major_version }}"
   - debug:
       msg: "{{ hostvars[inventory_hostname].ansible_distribution_version }}"
+
+  - name: setup epel release
+    yum:
+      name: epel-release
+      update_cache: yes
+      state: present
+    when: ansible_os_family == "RedHat"
+
   - name: Clean dnf RHEL8
     become: true
     command: dnf clean all -y
