--- a/ppg/pg-14-major-upgrade/tasks/main.yml
+++ b/ppg/pg-14-major-upgrade/tasks/main.yml
@@ -201,14 +201,14 @@
 - name: Start postgresql service for RHEL based
   service:
     name: postgresql-14
-    state: started
+    state: restarted
     enabled: true
   when: ansible_os_family == "RedHat"
 
 - name: Start postgresql service for Debian based
   service:
     name: postgresql
-    state: started
+    state: restarted
     enabled: true
   when: ansible_os_family == "Debian"
 
