--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -2,14 +2,17 @@
 - name: Clean dnf RHEL8
   become: true
   command: dnf clean all -y
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Disable dnf module for RHEL8
   become: true
   command: dnf module disable postgresql -y
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Disable llvm-toolset dnf module for RHEL8
   become: true
   command: dnf module disable llvm-toolset -y
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: setup epel release
   yum:
