--- a/ppg/pg-11-components-with-vanila/tasks/main.yml
+++ b/ppg/pg-11-components-with-vanila/tasks/main.yml
@@ -4,11 +4,11 @@
 
 - name: DNF disable postgresql RHEL
   command: sudo dnf module disable postgresql -y
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: DNF clean RHEL
   command: sudo dnf clean all -y
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Install vanila postgresql
   include_tasks: ../../../../tasks/install_pg11.yml
