--- a/tasks/install_ppg11.yml
+++ b/tasks/install_ppg11.yml
@@ -92,7 +92,7 @@
 
   - name: DNF clean RHEL
     command: sudo dnf module disable postgresql -y
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
