--- a/tasks/install_ppg12.yml
+++ b/tasks/install_ppg12.yml
@@ -82,7 +82,7 @@
 
   - name: DNF clean RHEL
     command: sudo dnf module disable postgresql -y
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Disable llvm-toolset dnf module for RHEL8
     become: true
