Update pgbackrest version

--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -451,6 +451,7 @@
       name: patroni
       state: started
       enabled: yes
+    when: ansible_os_family == "RedHat"
 
   - name: install etcd for RHEL
     yum:
