--- a/ppg/pg-14-major-upgrade/tasks/main.yml
+++ b/ppg/pg-14-major-upgrade/tasks/main.yml
@@ -171,32 +171,60 @@
   when: ansible_os_family == "Debian"
 
 - name: Change postgresql 13 port in config Debian
-  blockinfile:
+  lineinfile:
     path: /etc/postgresql/13/main/postgresql.conf
-    block: |
-      port = 5433
+    search_string: 'port'
+    line: port = 5433
   when: ansible_os_family == "Debian"
 
 - name: Change postgresql 13 port in config RHEL
-  blockinfile:
+  lineinfile:
     path: /var/lib/pgsql/13/data/postgresql.conf
-    block: |
-      port = 5433
+    search_string: 'port'
+    line: port = 5433
   when: ansible_os_family == "RedHat"
 
 - name: Change postgresql 14 port in config Debian
-  blockinfile:
+  lineinfile:
     path: /etc/postgresql/14/main/postgresql.conf
-    block: |
-      port = 5432
+    search_string: 'port'
+    line: port = 5432
   when: ansible_os_family == "Debian"
 
 - name: Change postgresql 14 port in config RHEL
-  blockinfile:
+  lineinfile:
     path: /var/lib/pgsql/14/data/postgresql.conf
-    block: |
-      port = 5432
+    search_string: 'port'
+    line: port = 5432
   when: ansible_os_family == "RedHat"
+
+#- name: Change postgresql 13 port in config Debian
+#  blockinfile:
+#    path: /etc/postgresql/13/main/postgresql.conf
+#    block: |
+#      port = 5433
+#  when: ansible_os_family == "Debian"
+#
+#- name: Change postgresql 13 port in config RHEL
+#  blockinfile:
+#    path: /var/lib/pgsql/13/data/postgresql.conf
+#    block: |
+#      port = 5433
+#  when: ansible_os_family == "RedHat"
+
+#- name: Change postgresql 14 port in config Debian
+#  blockinfile:
+#    path: /etc/postgresql/14/main/postgresql.conf
+#    block: |
+#      port = 5432
+#  when: ansible_os_family == "Debian"
+#
+#- name: Change postgresql 14 port in config RHEL
+#  blockinfile:
+#    path: /var/lib/pgsql/14/data/postgresql.conf
+#    block: |
+#      port = 5432
+#  when: ansible_os_family == "RedHat"
 
 - name: Restart postgresql service for RHEL based
   service:
