Add client package

--- a/ppg/pg-13-minor-upgrade/tasks/main.yml
+++ b/ppg/pg-13-minor-upgrade/tasks/main.yml
@@ -53,6 +53,7 @@
     state: latest
   vars:
     packages:
+    - percona-postgresql-client-common
     - percona-postgresql-13
     - percona-postgresql-client-13
     - percona-postgresql-doc-13
